--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
+    <script src="./app.js" defer></script>
     <title>Todo List</title>
   </head>
   <body>
@@ -16,15 +17,22 @@
       </header>
       <form>
         <input type="text" class="todo-input">
-        <button class="todo button" type="submit">
+        <button class="todo-button" type="submit">
           <i class="fas fa-plus-square"></i>
         </button>
+        <div class="select">
+          <select name="todos" class="filter-todo">
+            <option value="all">All</option>
+            <option value="completed">Completed</option>
+            <option value="uncompleted">Uncompleted</option>
+          </select>
+        </div>
       </form>
       <div class="todo-container">
         <ul class="todo-list"></ul>
       </div>
 
-      <script src="./app.js"></script>
+      
       
   </body>
 </html>
